css/main.css
html {
    position: relative;
    min-height: 100%;
}

body {
    margin-bottom: 10vh;
}

footer {
    position: absolute;
    bottom: 0;
    width: 100%;
    height: 10vh;
}

footer .row{
    background-color: #f8f8f8;
}

img {
    display: block;
    height: auto;
    max-width: 100%;
}

.row-carousel {
    display: table;
    width: 100%;
}

.col-carousel {
    display: table-cell;
    vertical-align: middle;
}

.logo {
    height: 100px
}

.logo-vcenter {
    display:table-cell;
    vertical-align:middle;
}

.backgroundcolor-main {
    background-color: #f8f8f8;
}

.f-bid-border {
    border: 1px solid #ccc;
    border-radius: 5px;
}

.border-bottom {
    padding-bottom: 10px;
    margin-bottom: 10px;
    border-bottom: 1px solid #ccc;
}

.border-all {
    border: 1px solid #ccc;
}

.border-all + .border-all {
    border-top: 0;
}

.copyright {
    margin-top: 30px;
    padding-top: 10px;
    border-top: 1px solid #ccc;
}

.breadcrumb {
    background-color: #ffffff;
    padding-left: 0;
}

.product {
    height: 200px;
}

.h3-margin {
    margin-top: 20px;
    margin-bottom: 10px;
}

/* <!-- carousel */
.carousel {
    margin-top: 30px;
    margin-bottom: 30px;
    height: 200px !important;
    border-radius: 25px;
    overflow: hidden;
    z-index: 1000;
}

.carousel-inner {
    height: 100%;
}

.item {
    background: #333;
    height: 100%;
}

.carousel-caption {
    top: 0;
    bottom: auto;
    height:100%;
}

.height-parent {
    height:100%;
    display: table;
    table-layout: fixed;
}

.height-parent img {
    position: absolute;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    margin: auto;
    max-width: 100%;
    max-height: 100%;
}

.vcenter {
    display:table-cell;
    vertical-align:middle;
    text-align:center;
}
/* carousel --> */

/* <!-- tabs */
.tabs-below > .nav-tabs,
.tabs-right > .nav-tabs,
.tabs-left > .nav-tabs {
    border-bottom: 0;
}

.tab-content > .tab-pane,
.pill-content > .pill-pane {
    display: none;
}

.tab-content > .active,
.pill-content > .active {
    display: block;
}

.tabs-below > .nav-tabs {
    border-top: 1px solid #ddd;
}

.tabs-below > .nav-tabs > li {
    margin-top: -1px;
    margin-bottom: 0;
}

.tabs-below > .nav-tabs > li > a {
    -webkit-border-radius: 0 0 4px 4px;
    -moz-border-radius: 0 0 4px 4px;
    border-radius: 0 0 4px 4px;
}

.tabs-below > .nav-tabs > li > a:hover,
.tabs-below > .nav-tabs > li > a:focus {
    border-top-color: #ddd;
    border-bottom-color: transparent;
}

.tabs-below > .nav-tabs > .active > a,
.tabs-below > .nav-tabs > .active > a:hover,
.tabs-below > .nav-tabs > .active > a:focus {
    border-color: transparent #ddd #ddd #ddd;
}

.tabs-left > .nav-tabs > li,
.tabs-right > .nav-tabs > li {
    float: none;
}

.tabs-left > .nav-tabs > li > a,
.tabs-right > .nav-tabs > li > a {
    min-width: 74px;
    margin-right: 0;
    margin-bottom: 3px;
}

.tabs-left > .nav-tabs {
    float: left;
    margin-right: 19px;
    border-right: 1px solid #ddd;
}

.tabs-left > .nav-tabs > li > a {
    margin-right: -1px;
    -webkit-border-radius: 4px 0 0 4px;
    -moz-border-radius: 4px 0 0 4px;
    border-radius: 4px 0 0 4px;
}

.tabs-left > .nav-tabs > li > a:hover,
.tabs-left > .nav-tabs > li > a:focus {
    border-color: #eeeeee #dddddd #eeeeee #eeeeee;
}

.tabs-left > .nav-tabs .active > a,
.tabs-left > .nav-tabs .active > a:hover,
.tabs-left > .nav-tabs .active > a:focus {
    border-color: #ddd transparent #ddd #ddd;
    *border-right-color: #ffffff;
}

.tabs-right > .nav-tabs {
    float: right;
    margin-left: 19px;
    border-left: 1px solid #ddd;
}

.tabs-right > .nav-tabs > li > a {
    margin-left: -1px;
    -webkit-border-radius: 0 4px 4px 0;
    -moz-border-radius: 0 4px 4px 0;
    border-radius: 0 4px 4px 0;
}

.tabs-right > .nav-tabs > li > a:hover,
.tabs-right > .nav-tabs > li > a:focus {
    border-color: #eeeeee #eeeeee #eeeeee #dddddd;
}

.tabs-right > .nav-tabs .active > a,
.tabs-right > .nav-tabs .active > a:hover,
.tabs-right > .nav-tabs .active > a:focus {
    border-color: #ddd #ddd #ddd transparent;
    *border-left-color: #ffffff;
}
/* tabs --> */

/* <!-- notify-city */
.alert-info > div > .btn {
	margin-top: 10px;
    margin-left: 5px;
    margin-right: 5px;
}

.alert {
    background: #d9edf7;
    border: 1px solid #bce8f1;;
    border-radius: 5px;
    -moz-border-radius: 5px;
    position: relative;
    padding: 5px;
    width: 300px;
    text-align: center;
    margin-bottom: 10px;
}

.alert:before,
.alert:after {
    content: '';
    border: solid transparent;
    position: absolute;
    left: 80%;
    margin-left: -12px;
    top: -24px;
    width: 0;
}
.alert:before {
    border-bottom-color: #bce8f1;;
    border-width: 12px;
}
.alert:after {
    border-bottom-color: #d9edf7;
    border-width: 13px;
    margin-left: -13px;
}
/* notify-city --> */

